--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,101 +6,103 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.MainActivity"
-    android:background="#EFEFEF">
+    android:background="@color/backgroundcolor"
+    android:padding="10dp"
+    >
 
     <LinearLayout
+        android:clipToPadding="false"
+        android:gravity = "center"
+        android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#ffffff"
             android:gravity="center"
-            android:orientation="vertical"
-            android:background="#ffffff">
+            android:orientation="vertical">
+
             <ImageView
                 android:layout_width="80dp"
-                android:layout_height="80dp" />
+                android:layout_height="80dp"
+                android:background="@drawable/circlebackgroundgreen"
+                android:src="@drawable/ic_profile_logo"/>
+
             <TextView
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Profile"
                 android:textColor="#000000"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginLeft="20dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
+            android:background="#ffffff"
             android:gravity="center"
-            android:orientation="vertical"
-            android:background="#ffffff">
+            android:orientation="vertical">
+
             <ImageView
                 android:layout_width="80dp"
-                android:layout_height="80dp" />
+                android:layout_height="80dp"
+                android:background="@drawable/circlebackgroundpurple"
+                android:src="@drawable/ic_progress_logo"/>
+
             <TextView
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Progress"
                 android:textColor="#000000"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         android:layout_weight="1"
         android:orientation="horizontal">
+
         <LinearLayout
             android:id="@+id/ll_lessons"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#ffffff"
             android:gravity="center"
-            android:orientation="vertical"
-            android:background="#ffffff">
+            android:orientation="vertical">
+
             <ImageView
                 android:layout_width="80dp"
-                android:layout_height="80dp" />
+                android:layout_height="80dp"
+                android:background="@drawable/circlebackgroundpink"
+                android:src="@drawable/ic_lesson_logo"/>
+
             <TextView
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Lessons"
                 android:textColor="#000000"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
         </LinearLayout>
-        <LinearLayout
-            android:layout_marginLeft="20dp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:background="#ffffff">
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp" />
-            <TextView
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ss"
-                android:textColor="#000000"
-                android:textSize="30sp"/>
-        </LinearLayout>
+
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
@@ -116,10 +118,13 @@
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
-            android:background="#ffffff">
+            android:background="#ffffff"
+            android:layout_gravity="center">
             <ImageView
                 android:layout_width="80dp"
-                android:layout_height="80dp" />
+                android:layout_height="80dp"
+                android:background="@drawable/circlebackgroundyellow"
+                android:src="@drawable/ic_search_logo"/>
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
@@ -128,13 +133,29 @@
                 android:textColor="#000000"
                 android:textSize="30sp"/>
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginLeft="20dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
+            android:background="#ffffff"
             android:gravity="center"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/circlebackgroundyellow"
+                android:src="@drawable/ic_qa_logo"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/ss"
+                android:textColor="#000000"
+                android:textSize="30sp" />
         </LinearLayout>
     </LinearLayout>
 
