--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,16 @@
     tools:context=".activity.MainActivity"
     android:background="@color/backgroundcolor"
     android:padding="10dp">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="EzziJava"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:textColor="#fff"
+        android:background="@color/colorAccent"
 
+        />
     <LinearLayout
         android:clipToPadding="false"
         android:gravity = "center"
@@ -18,6 +27,7 @@
         android:layout_weight="1"
         android:orientation="horizontal"
         android:layout_height="100dp">
+
 
         <LinearLayout
             android:id="@+id/ll_Profile"
@@ -44,6 +54,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_Progress"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
@@ -114,6 +125,7 @@
         android:layout_weight="1"
         android:orientation="horizontal">
         <LinearLayout
+            android:id="@+id/ll_Search"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -136,6 +148,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_QA"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
@@ -147,7 +160,7 @@
             <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:background="@drawable/circlebackgroundyellow"
+                android:background="@drawable/circlebackgroundgreen"
                 android:src="@drawable/ic_qa_logo"/>
 
             <TextView
