--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -17,13 +17,32 @@
         android:text="Home" />
 
     <TextView
-        android:id="@+id/tvSearch"
+        android:id="@+id/tvQuestion"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorGrassDark"
         android:gravity="center"
-        android:text="Questions"
+        android:text="EzziJava"
         android:textColor="#fff"
         android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/tvContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:text="If You Have Any Further Question, Please Contact Your Tutor In Charge Or Visit UNSW Moodle For Further Information
+            Hope You Enjoy The Fun With EzziJava"
+        android:textColor="@color/colorBitterSweetDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />
 
 </android.support.constraint.ConstraintLayout>
