--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/ll_QA"
+            android:id="@+id/ll_Questions"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
