--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,6 +16,8 @@
         android:background="@color/colorAccent"
         android:text="Home" />
 
+
+
     <TextView
         android:id="@+id/tvQuestion"
         android:layout_width="match_parent"
@@ -30,19 +32,28 @@
         android:id="@+id/tvContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tvQuestion"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="292dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="If You Have Any Further Question, Please Contact Your Tutor In Charge Or Visit UNSW Moodle For Further Information
-            Hope You Enjoy The Fun With EzziJava"
+        android:text="Click Youtube to get more Java Tutorial Video"
         android:textColor="@color/colorBitterSweetDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />
+    <Button
+        android:id="@+id/btYoutube"
+        android:text="Youtube"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvContent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:background="@color/colorGrapeFruitDark"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
